--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,15 +8,17 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/destinatario" routerLinkActive="active">Nuevo Destinatario</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/transferencia" routerLinkActive="active">Transferir</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" routerLink="/historial" routerLinkActive="active">Historial de Transferencias</a>
-          </li>          
+          <ng-container *ngIf="userService.usuarioIngresado()">
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/destinatario" routerLinkActive="active">Nuevo Destinatario</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/transferencia" routerLinkActive="active">Transferir</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" routerLink="/historial" routerLinkActive="active">Historial de Transferencias</a>
+            </li>   
+          </ng-container>
         </ul>
         <ul class="navbar-nav ml-auto" >
           <ng-container *ngIf="!userService.usuarioIngresado(); else cerrarSesion">
@@ -29,7 +31,7 @@
           </ng-container>
           <ng-template #cerrarSesion>
             <li class="nav-item">
-              <a class="nav-link" style="cursor: pointer;" (click)="userService.cerrarSesionUsuario()">Logout</a>
+              <a class="nav-link" style="cursor: pointer;" (click)="userService.cerrarSesionUsuario()">Cerrar sesión</a>
             </li>
           </ng-template>
         </ul>
